# cedar

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.md  DEVELOPERS  INSTALL.md  LICENSE.md  README.md  setup.py
app/: CMakeLists.txt  coll.cc  coll.h  config.json  exchangers.h  gpucycle.cc  gpukerns.cc  gputest.cc  line.cc  line.f90  ml_relax.cc  ml_relax.h  openmp-relax.json  plane.cc  relax.cc  relax.h  rescuda.cu  rescuda.h  resdebug.cc  resdebug.h  restest.cc  restest.json  test.cc
app/ds-timing/: dstime.cpp
app/kerntest/: test.cpp
app/mpi/: diffusion.f90  putf.f90  solve_test.cc
app/mpi-3d/: config.json  put_sol.f90  putf.f90  solve_test.cc
app/setup/: config.json  setup_test.cc
app/setup-3d/: test.cc
app/solve/: config.json  plot.py  solve_test.cc
app/solve-3d/: put_sol.f90  putf.f90  test.cc
app/test/: test.cc
app/timer-test/: timer_test.cc
examples/: CMakeLists.txt
examples/2d/mpi/: halo-config.json  halo.cc  halo.h  per_halo.cc  per_halo.h  periodic.cc  poisson.cc
examples/2d/ser/: periodic-config.json  periodic.cc  poisson.cc  poisson.py
examples/3d/mpi/: per_halo.cc  periodic.cc  poisson.cc
examples/3d/ser/: periodic.cc  poisson.cc
examples/basic-2d-mpi/: README.md  periodic.cc  poisson-config.json  poisson.cc  poisson_gpu.cc  test.cc  vcycle.hpp
examples/basic-2d-ser/: README.md  periodic.cc  poisson.cc
examples/basic-3d-mpi/: README.md  periodic.cc  poisson.cc
examples/basic-3d-ser/: README.md  periodic.cc  poisson.cc
examples/halo/: config.json  halo_test.cc
examples/halo-2d/: README.md  per_halo.cc  per_halo.h
examples/halo-3d/: README.md  per_halo.cc
examples/mpi/: config.json  solve_test.cc
examples/mpi-3d/: solve_test.cc
examples/mpi-rep/: config.json  solve_test.cc
examples/per-3d/: test.cc
examples/solve/: solve_test.cc
examples/timer-test/: timer_test.cc
src/: CMakeLists.txt  config.cc  global_manager.cc  global_params.cc  init.cc  kernel_params.cc  log.cc  malloc_pool.cc  memory.cc  multilevel_settings.cc
src/2d/: CMakeLists.txt  boundary_iterator.cc  boxmg-2d.h  gallery.cc  grid_func.cc  grid_stencil.cc  interp.cc  kernel_manager.cc  library.cmake  matvec.cc  prolong_op.cc  relax.cc  relax_stencil.cc  residual.cc  restrict.cc  restrict_op.cc  solve_cg.cc  solver.cc  stencil.cc  stencil_op.cc
src/2d/cg/: CMakeLists.txt  setup_cg_boxmg.cc  setup_cg_lu.cc  setup_cg_redist.cc  solve_cg.cc
src/2d/core/: CMakeLists.txt  array.h  base_types.h  boundary_iterator.cc  boundary_iterator.h  core.dox  discrete_op.h  grid_func.cc  grid_func.h  grid_stencil.cc  grid_stencil.h  level.h  multilevel.h  relax_stencil.cc  relax_stencil.h  solver.cc  solver.h  stencil.cc  stencil.h  stencil_op.cc  stencil_op.h  types.h
src/2d/ftn/: BMG2_SymStd_SETUP_ITLI_ex.f90  BMG2_SymStd_SETUP_cg_LU_gpu.f90  BMG2_SymStd_SETUP_cg_LU_offload.f90  BMG2_SymStd_SETUP_cg_LU_omp.f90  BMG2_SymStd_SETUP_interp_OI.f  BMG2_SymStd_SETUP_interp_OI.f90  BMG2_SymStd_SETUP_lines_x.f90  BMG2_SymStd_SETUP_recip.f90  BMG2_SymStd_SOLVE_cg_gpu.f90  BMG2_SymStd_SOLVE_cg_offload.f90  BMG2_SymStd_SOLVE_cg_omp.f90  BMG2_SymStd_interp_add_offload.f90  BMG2_SymStd_interp_add_omp.f90  BMG2_SymStd_relax_GS_offload.f90  BMG2_SymStd_relax_GS_omp.f90  BMG2_SymStd_relax_lines_y.f90  BMG2_SymStd_residual_intent.f90  BMG2_SymStd_residual_noffload.f90  BMG2_SymStd_residual_offload.f90  BMG2_SymStd_residual_omp.f90  BMG2_SymStd_restrict.f90  BMG2_SymStd_restrict_offload.f90  BMG2_SymStd_restrict_omp.f90  BMG_get_bc.f90  BMG_parameters.h  BMG_parameters_f90.h  BMG_stencils.h  BMG_stencils_f90.h  BMG_workspace_f90.h  CMakeLists.txt  ModInterface.f90  gpuchol.cc  gpuchol.f90  interface.cc  magma_init.f90
src/2d/gpu/: gallery.cc  grid_func.cc  grid_stencil.cc  interp.cc  kernel_manager.cc  msg_exchanger.cc  prolong_op.cc  redist_solver.cc  restrict.cc  restrict_op.cc  setup_nog.cc  solver.cc  stencil_op.cc  tausch_exchanger.cc
src/2d/inter/: CMakeLists.txt  galerkin_prod.cc  interp.cc  prolong_op.cc  prolong_op.h  restrict.cc  restrict_op.cc  restrict_op.h  setup_interp.cc  types.h
src/2d/interface/: CMakeLists.txt
src/2d/kernel/: CMakeLists.txt  calls.cc  calls.h  factory.cc  factory.h  galerkin_prod.cc  galerkin_prod.h  halo.cc  halo.h  interp.cc  interp.h  kernel.dox  manager.cc  manager.h  matvec.cc  matvec.h  name.h  registry.cc  registry.h  relax.cc  relax.h  residual.cc  residual.h  restrict.cc  restrict.h  setup_cg_boxmg.cc  setup_cg_boxmg.h  setup_cg_lu.cc  setup_cg_lu.h  setup_interp.cc  setup_interp.h  setup_nog.cc  setup_nog.h  setup_relax.cc  setup_relax.h  solve_cg.cc  solve_cg.h
src/2d/mpi/: gallery.cc  grid_func.cc  grid_stencil.cc  grid_topo.cc  halo.cc  interp.cc  kernel_manager.cc  msg_exchange.cc  msg_exchanger.cc  prolong_op.cc  redist_solver.cc  residual.cc  restrict.cc  restrict_op.cc  setup_nog.cc  solver.cc  stencil_op.cc  tausch_exchanger.cc
src/2d/redist/: cholesky_solver.cc
src/2d/relax/: CMakeLists.txt  relax.cc  setup_relax.cc
src/3d/: CMakeLists.txt  gallery.cc  grid_func.cc  grid_stencil.cc  interp.cc  kernel_manager.cc  matvec.cc  prolong_op.cc  relax_planes.cc  relax_stencil.cc  residual.cc  restrict.cc  restrict_op.cc  solve_cg.cc  solver.cc  stencil_op.cc
src/common/: boxmg-common.h  library.cmake
src/config/: CMakeLists.txt  reader.cc  schema.json
src/ftl_interop/: CMakeLists.txt  Cedar.cpp  mpi.cpp  mpi_msg.cpp
src/interface/: CMakeLists.txt  object.cc
src/mpi/: CMakeLists.txt  grid_topo.cc
src/perf/: CMakeLists.txt  cholesky_model.cc  params.cc  perf_factory.cc  predict.cc  search.cc  vcycle_model.cc
src/services/: CMakeLists.txt  mempool.cc  mempool.f90  message_passing.cc  message_passing.f90
src/util/: CMakeLists.txt  agg_timer.cc  basic_allocator.cc  basic_logger.cc  grid.cc  kernel_registry.cc  log.cc  time_log.cc  timer.cc
test/2d/: CMakeLists.txt  pyrelax.c  pyrelax.h  pyrelax.pyx  test_poisson.cc  test_relax.cc  test_residual.cc
test/3d/: CMakeLists.txt  pyplanes.c  pyplanes.h  pyplanes.pyx  test-planes-ser.json  test_planes.cc  test_poisson.cc
(+737 files in other folders)
